--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,6 @@ project (soxr C)
 set (DESCRIPTION_SUMMARY
     "High quality, one-dimensional sample-rate conversion library")
 
-
-
 # Release versioning:
 
 set (PROJECT_VERSION_MAJOR 0)
@@ -40,7 +38,7 @@ if (NOT CMAKE_BUILD_TYPE)
     "Build type, one of: None Debug Release RelWithDebInfo MinSizeRel." FORCE)
 endif ()
 
-option (BUILD_TESTS "Build sanity-tests." ON)
+option (BUILD_TESTS "Build sanity-tests." OFF)
 option (BUILD_EXAMPLES "Build examples." OFF)
 option (WITH_OPENMP "Include OpenMP threading." OFF)
 option (WITH_LSR_BINDINGS "Include a `libsamplerate'-like interface." OFF)
@@ -75,11 +73,10 @@ cmake_dependent_option (BUILD_LSR_TESTS "Build LSR tests." OFF
 option (WITH_HI_PREC_CLOCK "Enable high-precision time-base." ON)
 option (WITH_FLOAT_STD_PREC_CLOCK
   "Use floating-point for standard-precision time-base." OFF)
-option (WITH_DEV_TRACE "Enable developer trace capability." ON)
+option (WITH_DEV_TRACE "Enable developer trace capability." OFF)
 option (WITH_DEV_GPROF "Enable developer grpof output." OFF)
 mark_as_advanced (WITH_HI_PREC_CLOCK WITH_FLOAT_STD_PREC_CLOCK
   WITH_DEV_TRACE WITH_DEV_GPROF)
-
 
 
 # Introspection:
@@ -89,10 +86,10 @@ list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)
 include (CheckFunctionExists)
 include (CheckIncludeFiles)
 include (CheckLibraryExists)
-include (SetSystemProcessor)
+# BBedit include (SetSystemProcessor)
 include (TestBigEndian)
 
-set_system_processor ()
+# BBedit set_system_processor ()
 
 check_library_exists (m pow "" NEED_LIBM)
 if (NEED_LIBM)
@@ -163,7 +160,7 @@ if (CMAKE_C_COMPILER_ID STREQUAL "GNU" OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
   endif ()
   # Can use std=c89, but gnu89 should give faster sinf, cosf, etc.:
   set (PROJECT_C_FLAGS "${PROJECT_CXX_FLAGS} \
-       -std=gnu89 -Wnested-externs -Wmissing-prototypes -Wstrict-prototypes")
+  -std=gnu89 -Wnested-externs -Wmissing-prototypes -Wstrict-prototypes -Ofast -fno-stack-protector -mfpu=neon")
   if (CMAKE_BUILD_TYPE STREQUAL "Release")
     set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -s") # strip
   endif ()
@@ -333,3 +330,5 @@ if (UNIX)
       "dist;/lsr-tests/;/Debug.*/;/Release.*/;\\\\.swp$;\\\\.git.*;/\\\\.git/")
   include (CPack)
 endif ()
+
+
